--- a/style.css
+++ b/style.css
@@ -60,3 +60,35 @@ h1, h2, h3, h4, h5, h6 {
     position:relative;
     right:20px;    
 }
+
+.page-numbers {
+	display: inline-block;
+	padding: 5px 10px;
+	margin: 0 2px 0 0;
+	border: 1px solid #eee;
+	line-height: 1;
+	text-decoration: none;
+	border-radius: 2px;
+    font-weight: 400; 
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent; 
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.page-numbers.current,
+a.page-numbers:hover { 
+    color: #6c757d;
+    background-color: transparent;
+	text-decoration: none;
+}
