--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ a.page-numbers:hover {
     display: inline-block;
     line-height: 32px;
     border: 1px solid rgba(0,0,0,.1);
-    padding: 0 13px;
+    padding: 0 13px 0 0;
     border-radius: 2px;
 }
 
@@ -111,4 +111,9 @@ a.page-numbers:hover {
     color: #6c757d;
     background-color: transparent;
 	text-decoration: none;
+}
+
+.img-100{
+    height:100px;
+    width:100px;
 }
