--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: Standard, Default, Bootstrap, Responsive, Blog
-Text Domain: Bootstrap-Theme-Wordpress
+Text Domain: bootstrapthemewordpress
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
